# joinc

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/joinccmd/: Cargo.toml  README.md
crates/joinccmd/src/: main.rs
crates/libjoinc/: Cargo.toml  README.md
crates/libjoinc/src/: defs.rs  error.rs  lib.rs  types.rs  xml.rs
crates/libjoinc/src/rpc/: commands.rs  connection.rs  mod.rs  xml_serde.rs
crates/libjoincserde/: Cargo.toml  README.md
crates/libjoincserde/src/: de.rs  error.rs  lib.rs  ser.rs
