[package]
name = "libjoinc"
version = "0.1.0"
edition = "2021"
authors = ["vmc <vmc.coding@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
libjoincserde = { version = "0.1.0", path = "../libjoincserde" }
md5 = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_repr = "0.1.18"
